--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "curso-ecmascript",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [
-    "JavaScript",
-    "ecmascript"
-  ],
-  "author": "Diego Reyes <diegorele13@gmail.com>",
-  "license": "MIT"
+	"name": "curso-ecmascript",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"keywords": [
+		"JavaScript",
+		"ecmascript"
+	],
+	"author": "Diego Reyes <diegorele13@gmail.com>",
+	"license": "MIT",
+	"type": "module"
 }
