--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
 	],
 	"author": "Diego Reyes <diegorele13@gmail.com>",
 	"license": "MIT",
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"node-fetch": "^3.3.0"
+	}
 }
